[package]
name = "tf_idf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
rusqlite = "0.31.0"
walkdir = "2"
regex = "1.5"

[dependencies.stem]
git = "https://github.com/minhnhdo/rust-stem"
